--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,13 @@
 name: Data-RoundRobin
-version: 0.01
-abstract: 
+version: 0.02
+abstract: Serve data in a round robin manner.
 author: Kang-min Liu <gugod@gugod.org>
 license: perl
 distribution_type: module
 build_requires:
   Test::More: 0
+requires:
+  perl: 5.6.1
 no_index:
   directory:
     - inc
